	  (#11895)
	* Ignore Daylight Saving Time when performing calculations related to
	  birthdays. (Dustin Gathmann) (#13533)
	* It is now possible to specify multiple encodings on the Advanced tab of
	  an ICQ account's settings by using a comma-delimited list.  (Dmitry
	  Utkin (#13496)

	IRC:
	* Add "authserv" service command.  (tomos) (#13337)

	Plugins:
	* The Voice/Video Settings plugin now includes the ability to test
	  microphone settings. (Jakub Adam) (#13182)

	Windows-Specific Changes:
	* Fix building libpurple with Visual C++ .NET 2005. This was accidentally
	  broken in 2.7.11. (Florian Quèze)
	* Build internal libgadu without -mms-bitfields, fixing several
	  long-standing Gadu-Gadu issues. (#11958, #6297)

version 2.7.11 (03/10/2011):
	General:
	* Our bundled libgadu should now build on HP-UX.
	* Fix some instances of file transfers never completing. (Cristi Posoiu)
	  (#12472)

	Pidgin:
	* Sort by Status no longer causes buddies to move around when you
	  click them.
	* Fix embedding in the system tray on older GTK+ releases (such as on
	  CentOS 5.5 and older Fedora).
	* No longer require libstartup-notification for startup notification
	  support.  GTK+ has included support for years, so use it instead. (David
	  Benjamin) (#13245)

	AIM:
	* Fix a bug where some buddies from your buddy list might not show up.
	  Affected non-English ICQ users the most. (#13386)
	* Send keepalives for all types of network connections.  Will hopefully
	  make chat rooms more reliable. (#1449)

	MSN:
	* Fix bug that prevented added buddies to your buddy list in certain
	  circumstances.  (#13298)

	MXit:
	* MXit plugin and reported client version now follow the libpurple
	  version.
	* Don't try to request profile information for non-user contacts.
	* Allow Re-Invite for contacts in Deleted or Rejected state.
	* Ensure we don't send packets too fast to the MXit server and trigger
	  its flood-detection mechanism.  Also increased the internal packet queue