@@ -54,6 +54,10 @@ version 2.8.0 (??/??/????):
 	IRC:
 	* Add "authserv" service command.  (tomos) (#13337)
 
+	XMPP:
+	* Remember the previously entered user directory when searching.
+	  (Keith Moyer) (#12451)
+
 	Plugins:
 	* The Voice/Video Settings plugin now includes the ability to test
 	  microphone settings. (Jakub Adam) (#13182)
